--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body >
     <header>
-        <figure>foto</figure>
+        <figure>
+            <img src="/me.jpg" width="50%" height="50%" contenteditable="">
+        </figure>
         <nav>
             <ul>
                 <li>mis proyectos</li>
@@ -23,15 +25,10 @@
         <aside>
             <div>elemento 1</div>
             <div>elemento 2</div>
-            <div>elemento 3</div>
-            <div>elemento 4</div>
-            <div>elemento 4</div>
-            <div>elemento 4</div>
-            <div>elemento 4</div>
-            <div>elemento 4</div>
-            <div>elemento 4</div>
-            <div>elemento 4</div>
-            <div>elemento 4</div>            
+            <div>elemento 2</div>
+            <div>elemento 2</div>
+            <div>elemento 2</div>
+                     
         </aside>
         <section>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure soluta, modi deleniti perspiciatis quasi ut expedita debitis ullam quidem nobis quae incidunt sit at porro error recusandae voluptatum vero voluptates?
@@ -40,7 +37,7 @@
     </main>
     <footer>
         <div class="footer-sociales">
-            redes sociales
+            redes 
         </div>
         <div class="footer-info">
             informacion
