--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
         <aside>
-            <div class="item">elemento 1</div>
+            <div class="item"><a href="https://jesuslayton.github.io/reloj/">Mi reloj digital</a></div>
             <div class="item">elemento 2</div>
             <div class="item">elemento 2</div>
             <div class="item">elemento 2</div>
