--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
         <aside>
             <div class="item"><a href="https://jesuslayton.github.io/reloj/">Mi reloj digital</a></div>
-            <div class="item"><a href="https://jesuslayton.github.io/cronometro/"></a></div>
+            <div class="item"><a href="https://jesuslayton.github.io/cronometro/">Cronómetro</a></div>
             <div class="item">elemento 2</div>
             <div class="item">elemento 2</div>
             
