--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </header>
     <main>
         <aside>
-            <div class="item"><a href="https://jesuslayton.github.io/reloj/">Mi reloj digital</a></div>
-            <div class="item"><a href="https://jesuslayton.github.io/cronometro/">Cronómetro</a></div>
+            <div class="item"><a href="https://jesuslayton.github.io/reloj/" target="_blank" rel="noopener noreferrer">Mi reloj digital</a></div>
+            <div class="item"><a href="https://jesuslayton.github.io/cronometro/" target="_blank" rel="noopener noreferrer">Cronómetro</a></div>
             <div class="item">elemento 2</div>
             <div class="item">elemento 2</div>
             
